Small backend changes. Created beautiful form to create new vehicle offers / Added CKEditor5

--- a/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,7 +1,5 @@
-<mat-toolbar color="accent">
-  <span>
-    <h3><b>VehicleBuy App</b></h3>
-  </span>
+<mat-toolbar>
+  <span> </span>
   <span class="toolbar-fill"> </span>
   <span>
     <button mat-button routerLink="/login" *ngIf="!userLoggedIn">
